Remove magic write

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -108,10 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile src/obtain.py\n",
-    "\n",
-    "# write functions that form a data pipeline, \n",
-    "# then run this cell to save them in src/obtain.py"
+    "# write functions that form a data pipeline, \n"
    ]
   },
   {
