--- a/notebooks/1.0-rem-acquire.ipynb
+++ b/notebooks/1.0-rem-acquire.ipynb
@@ -1007,6 +1007,52 @@
    "source": [
     "get_train_features()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_train_labels():\n",
+    "    if path.isfile('../data/raw/h1n1_train_labels.csv'):\n",
+    "        print('Training labels already acquired.')\n",
+    "    else:\n",
+    "        train_labels = pd.read_csv('https://s3.amazonaws.com/drivendata-prod/data/66/public/training_set_labels.csv')\n",
+    "        train_labels.to_csv('../data/raw/h1n1_train_labels.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_train_labels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_test_features():\n",
+    "    if path.isfile('../data/raw/h1n1_test_features.csv'):\n",
+    "        print('Test features already acquired.')\n",
+    "    else:\n",
+    "        test_features = pd.read_csv('https://s3.amazonaws.com/drivendata-prod/data/66/public/test_set_features.csv')\n",
+    "        test_features.to_csv('../data/raw/h1n1_test_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_test_features()"
+   ]
   }
  ],
  "metadata": {
