--- a/notebooks/3.0-rem-prepare.ipynb
+++ b/notebooks/3.0-rem-prepare.ipynb
@@ -466,64 +466,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>respondent_id</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>35</th>\n",
+       "      <td>employment_occupation</td>\n",
+       "      <td>13470</td>\n",
+       "      <td>50.436215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>h1n1_concern</td>\n",
-       "      <td>92</td>\n",
-       "      <td>0.344479</td>\n",
+       "      <th>34</th>\n",
+       "      <td>employment_industry</td>\n",
+       "      <td>13330</td>\n",
+       "      <td>49.912008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>h1n1_knowledge</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0.434343</td>\n",
+       "      <th>15</th>\n",
+       "      <td>health_insurance</td>\n",
+       "      <td>12274</td>\n",
+       "      <td>45.957989</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>behavioral_antiviral_meds</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0.265848</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>behavioral_avoidance</td>\n",
-       "      <td>208</td>\n",
-       "      <td>0.778822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>behavioral_face_mask</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0.071142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>behavioral_wash_hands</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0.157262</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>behavioral_large_gatherings</td>\n",
-       "      <td>87</td>\n",
-       "      <td>0.325757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>behavioral_outside_home</td>\n",
-       "      <td>82</td>\n",
-       "      <td>0.307036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>behavioral_touch_face</td>\n",
-       "      <td>128</td>\n",
-       "      <td>0.479275</td>\n",
+       "      <th>26</th>\n",
+       "      <td>income_poverty</td>\n",
+       "      <td>4423</td>\n",
+       "      <td>16.561201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -536,6 +500,30 @@
        "      <td>doctor_recc_seasonal</td>\n",
        "      <td>2160</td>\n",
        "      <td>8.087767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>rent_or_own</td>\n",
+       "      <td>2042</td>\n",
+       "      <td>7.645936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>employment_status</td>\n",
+       "      <td>1463</td>\n",
+       "      <td>5.477965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>marital_status</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>5.272026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>education</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>5.268282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -556,10 +544,28 @@
        "      <td>3.010447</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>health_insurance</td>\n",
-       "      <td>12274</td>\n",
-       "      <td>45.957989</td>\n",
+       "      <th>21</th>\n",
+       "      <td>opinion_seas_sick_from_vacc</td>\n",
+       "      <td>537</td>\n",
+       "      <td>2.010709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>opinion_seas_risk</td>\n",
+       "      <td>514</td>\n",
+       "      <td>1.924589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>opinion_seas_vacc_effective</td>\n",
+       "      <td>462</td>\n",
+       "      <td>1.729884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>opinion_h1n1_sick_from_vacc</td>\n",
+       "      <td>395</td>\n",
+       "      <td>1.479013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -574,76 +580,70 @@
        "      <td>1.452803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>opinion_h1n1_sick_from_vacc</td>\n",
-       "      <td>395</td>\n",
-       "      <td>1.479013</td>\n",
+       "      <th>33</th>\n",
+       "      <td>household_children</td>\n",
+       "      <td>249</td>\n",
+       "      <td>0.932340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>opinion_seas_vacc_effective</td>\n",
-       "      <td>462</td>\n",
-       "      <td>1.729884</td>\n",
+       "      <th>32</th>\n",
+       "      <td>household_adults</td>\n",
+       "      <td>249</td>\n",
+       "      <td>0.932340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>opinion_seas_risk</td>\n",
-       "      <td>514</td>\n",
-       "      <td>1.924589</td>\n",
+       "      <th>4</th>\n",
+       "      <td>behavioral_avoidance</td>\n",
+       "      <td>208</td>\n",
+       "      <td>0.778822</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>opinion_seas_sick_from_vacc</td>\n",
-       "      <td>537</td>\n",
-       "      <td>2.010709</td>\n",
+       "      <th>9</th>\n",
+       "      <td>behavioral_touch_face</td>\n",
+       "      <td>128</td>\n",
+       "      <td>0.479275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>age_group</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2</th>\n",
+       "      <td>h1n1_knowledge</td>\n",
+       "      <td>116</td>\n",
+       "      <td>0.434343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>education</td>\n",
-       "      <td>1407</td>\n",
-       "      <td>5.268282</td>\n",
+       "      <th>1</th>\n",
+       "      <td>h1n1_concern</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0.344479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>race</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>7</th>\n",
+       "      <td>behavioral_large_gatherings</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.325757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>sex</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>8</th>\n",
+       "      <td>behavioral_outside_home</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0.307036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>income_poverty</td>\n",
-       "      <td>4423</td>\n",
-       "      <td>16.561201</td>\n",
+       "      <th>3</th>\n",
+       "      <td>behavioral_antiviral_meds</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0.265848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>marital_status</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>5.272026</td>\n",
+       "      <th>6</th>\n",
+       "      <td>behavioral_wash_hands</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.157262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>rent_or_own</td>\n",
-       "      <td>2042</td>\n",
-       "      <td>7.645936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>employment_status</td>\n",
-       "      <td>1463</td>\n",
-       "      <td>5.477965</td>\n",
+       "      <th>5</th>\n",
+       "      <td>behavioral_face_mask</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.071142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -658,28 +658,28 @@
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>household_adults</td>\n",
-       "      <td>249</td>\n",
-       "      <td>0.932340</td>\n",
+       "      <th>25</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>household_children</td>\n",
-       "      <td>249</td>\n",
-       "      <td>0.932340</td>\n",
+       "      <th>24</th>\n",
+       "      <td>race</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>employment_industry</td>\n",
-       "      <td>13330</td>\n",
-       "      <td>49.912008</td>\n",
+       "      <th>22</th>\n",
+       "      <td>age_group</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>employment_occupation</td>\n",
-       "      <td>13470</td>\n",
-       "      <td>50.436215</td>\n",
+       "      <th>0</th>\n",
+       "      <td>respondent_id</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -687,42 +687,42 @@
       ],
       "text/plain": [
        "                    column_name n_nans  percentage_nans\n",
-       "0                 respondent_id      0         0.000000\n",
-       "1                  h1n1_concern     92         0.344479\n",
-       "2                h1n1_knowledge    116         0.434343\n",
-       "3     behavioral_antiviral_meds     71         0.265848\n",
-       "4          behavioral_avoidance    208         0.778822\n",
-       "5          behavioral_face_mask     19         0.071142\n",
-       "6         behavioral_wash_hands     42         0.157262\n",
-       "7   behavioral_large_gatherings     87         0.325757\n",
-       "8       behavioral_outside_home     82         0.307036\n",
-       "9         behavioral_touch_face    128         0.479275\n",
+       "35        employment_occupation  13470        50.436215\n",
+       "34          employment_industry  13330        49.912008\n",
+       "15             health_insurance  12274        45.957989\n",
+       "26               income_poverty   4423        16.561201\n",
        "10             doctor_recc_h1n1   2160         8.087767\n",
        "11         doctor_recc_seasonal   2160         8.087767\n",
+       "28                  rent_or_own   2042         7.645936\n",
+       "29            employment_status   1463         5.477965\n",
+       "27               marital_status   1408         5.272026\n",
+       "23                    education   1407         5.268282\n",
        "12        chronic_med_condition    971         3.635751\n",
        "13         child_under_6_months    820         3.070356\n",
        "14                health_worker    804         3.010447\n",
-       "15             health_insurance  12274        45.957989\n",
+       "21  opinion_seas_sick_from_vacc    537         2.010709\n",
+       "20            opinion_seas_risk    514         1.924589\n",
+       "19  opinion_seas_vacc_effective    462         1.729884\n",
+       "18  opinion_h1n1_sick_from_vacc    395         1.479013\n",
        "16  opinion_h1n1_vacc_effective    391         1.464036\n",
        "17            opinion_h1n1_risk    388         1.452803\n",
-       "18  opinion_h1n1_sick_from_vacc    395         1.479013\n",
-       "19  opinion_seas_vacc_effective    462         1.729884\n",
-       "20            opinion_seas_risk    514         1.924589\n",
-       "21  opinion_seas_sick_from_vacc    537         2.010709\n",
-       "22                    age_group      0         0.000000\n",
-       "23                    education   1407         5.268282\n",
-       "24                         race      0         0.000000\n",
-       "25                          sex      0         0.000000\n",
-       "26               income_poverty   4423        16.561201\n",
-       "27               marital_status   1408         5.272026\n",
-       "28                  rent_or_own   2042         7.645936\n",
-       "29            employment_status   1463         5.477965\n",
+       "33           household_children    249         0.932340\n",
+       "32             household_adults    249         0.932340\n",
+       "4          behavioral_avoidance    208         0.778822\n",
+       "9         behavioral_touch_face    128         0.479275\n",
+       "2                h1n1_knowledge    116         0.434343\n",
+       "1                  h1n1_concern     92         0.344479\n",
+       "7   behavioral_large_gatherings     87         0.325757\n",
+       "8       behavioral_outside_home     82         0.307036\n",
+       "3     behavioral_antiviral_meds     71         0.265848\n",
+       "6         behavioral_wash_hands     42         0.157262\n",
+       "5          behavioral_face_mask     19         0.071142\n",
        "30               hhs_geo_region      0         0.000000\n",
        "31                   census_msa      0         0.000000\n",
-       "32             household_adults    249         0.932340\n",
-       "33           household_children    249         0.932340\n",
-       "34          employment_industry  13330        49.912008\n",
-       "35        employment_occupation  13470        50.436215"
+       "25                          sex      0         0.000000\n",
+       "24                         race      0         0.000000\n",
+       "22                    age_group      0         0.000000\n",
+       "0                 respondent_id      0         0.000000"
       ]
      },
      "execution_count": 3,
@@ -740,10 +740,60 @@
     "        amissing_data = df[col].isnull().sum()\n",
     "        amissing_in_percentage = (df[col].isnull().sum()/df[col].shape[0])*100\n",
     "        missing_data.loc[len(missing_data)] = [acolumn_name, amissing_data, amissing_in_percentage]\n",
-    "    return missing_data\n",
+    "    return missing_data.sort_values(by='percentage_nans', ascending=False)\n",
     "\n",
     "percent_nans(Xtrain)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "xtkaffoo    1778\n",
+       "mxkfnird    1509\n",
+       "emcorrxb    1270\n",
+       "cmhcxjea    1247\n",
+       "xgwztkwe    1082\n",
+       "hfxkjkmi     766\n",
+       "qxajmpny     548\n",
+       "xqwwgdyp     485\n",
+       "kldqjyjy     469\n",
+       "uqqtjvyb     452\n",
+       "tfqavkke     388\n",
+       "ukymxvdu     372\n",
+       "vlluhbov     354\n",
+       "oijqvulv     344\n",
+       "ccgxvspp     341\n",
+       "bxpfxfdn     331\n",
+       "haliazsg     296\n",
+       "rcertsgn     276\n",
+       "xzmlyyjv     248\n",
+       "dlvbwzss     227\n",
+       "hodpvpew     208\n",
+       "dcjcmpih     148\n",
+       "pvmttkik      98\n",
+       "Name: employment_occupation, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtrain.employment_occupation.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
