Continue preparing health insurance

--- a/notebooks/3.0-rem-prepare.ipynb
+++ b/notebooks/3.0-rem-prepare.ipynb
@@ -1590,75 +1590,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>behavioral_face_mask</th>\n",
-       "      <th>0.0</th>\n",
-       "      <th>1.0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>health_insurance</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0.0</th>\n",
-       "      <td>1570</td>\n",
-       "      <td>165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.0</th>\n",
-       "      <td>11875</td>\n",
-       "      <td>812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>missing</th>\n",
-       "      <td>11402</td>\n",
-       "      <td>864</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "behavioral_face_mask    0.0  1.0\n",
-       "health_insurance                \n",
-       "0.0                    1570  165\n",
-       "1.0                   11875  812\n",
-       "missing               11402  864"
+       "health_insurance\n",
+       "0.0        1023\n",
+       "1.0        8542\n",
+       "missing    7508\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.crosstab(Xtrain.health_insurance, Xtrain.behavioral_face_mask, dropna=False)"
+    "pd.crosstab(Xtrain.health_insurance, Xtrain.behavioral_large_gatherings, dropna=False).max(axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
