--- a/notebooks/3.0-rem-prepare.ipynb
+++ b/notebooks/3.0-rem-prepare.ipynb
@@ -763,7 +763,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Columns\n",
+    "## Let's fix the columns\n",
     "\n",
     "### Employment Occupation"
    ]
@@ -1589,35 +1589,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "health_insurance\n",
-       "0.0        1023\n",
-       "1.0        8542\n",
-       "missing    7508\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pd.crosstab(Xtrain.health_insurance, Xtrain.behavioral_large_gatherings, dropna=False).max(axis=1)"
+    "#### Replace"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
