Continue developing impute funtion

--- a/notebooks/3.0-rem-prepare.ipynb
+++ b/notebooks/3.0-rem-prepare.ipynb
@@ -1592,8 +1592,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Replace"
+    "#### Better Imputer function"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_best_imputer():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>race</th>\n",
+       "      <th>Black</th>\n",
+       "      <th>Hispanic</th>\n",
+       "      <th>Other or Multiple</th>\n",
+       "      <th>White</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>health_insurance</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>202</td>\n",
+       "      <td>314</td>\n",
+       "      <td>134</td>\n",
+       "      <td>1086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>956</td>\n",
+       "      <td>590</td>\n",
+       "      <td>734</td>\n",
+       "      <td>10417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>missing</th>\n",
+       "      <td>960</td>\n",
+       "      <td>851</td>\n",
+       "      <td>744</td>\n",
+       "      <td>9719</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "race              Black  Hispanic  Other or Multiple  White\n",
+       "health_insurance                                           \n",
+       "0.0                 202       314                134   1086\n",
+       "1.0                 956       590                734  10417\n",
+       "missing             960       851                744   9719"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(Xtrain.health_insurance, Xtrain.race)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
