--- a/notebooks/3.0-rem-prepare.ipynb
+++ b/notebooks/3.0-rem-prepare.ipynb
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,25 +1589,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Better Imputer function"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_best_imputer():\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1630,69 +1613,281 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>race</th>\n",
-       "      <th>Black</th>\n",
-       "      <th>Hispanic</th>\n",
-       "      <th>Other or Multiple</th>\n",
-       "      <th>White</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>health_insurance</th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>column_name</th>\n",
+       "      <th>n_nans</th>\n",
+       "      <th>percentage_nans</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0.0</th>\n",
-       "      <td>202</td>\n",
-       "      <td>314</td>\n",
-       "      <td>134</td>\n",
-       "      <td>1086</td>\n",
+       "      <th>26</th>\n",
+       "      <td>income_poverty</td>\n",
+       "      <td>4423</td>\n",
+       "      <td>16.561201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1.0</th>\n",
-       "      <td>956</td>\n",
-       "      <td>590</td>\n",
-       "      <td>734</td>\n",
-       "      <td>10417</td>\n",
+       "      <th>10</th>\n",
+       "      <td>doctor_recc_h1n1</td>\n",
+       "      <td>2160</td>\n",
+       "      <td>8.087767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>missing</th>\n",
-       "      <td>960</td>\n",
-       "      <td>851</td>\n",
-       "      <td>744</td>\n",
-       "      <td>9719</td>\n",
+       "      <th>11</th>\n",
+       "      <td>doctor_recc_seasonal</td>\n",
+       "      <td>2160</td>\n",
+       "      <td>8.087767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>rent_or_own</td>\n",
+       "      <td>2042</td>\n",
+       "      <td>7.645936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>employment_status</td>\n",
+       "      <td>1463</td>\n",
+       "      <td>5.477965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>marital_status</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>5.272026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>education</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>5.268282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>chronic_med_condition</td>\n",
+       "      <td>971</td>\n",
+       "      <td>3.635751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>child_under_6_months</td>\n",
+       "      <td>820</td>\n",
+       "      <td>3.070356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>health_worker</td>\n",
+       "      <td>804</td>\n",
+       "      <td>3.010447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>opinion_seas_sick_from_vacc</td>\n",
+       "      <td>537</td>\n",
+       "      <td>2.010709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>opinion_seas_risk</td>\n",
+       "      <td>514</td>\n",
+       "      <td>1.924589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>opinion_seas_vacc_effective</td>\n",
+       "      <td>462</td>\n",
+       "      <td>1.729884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>opinion_h1n1_sick_from_vacc</td>\n",
+       "      <td>395</td>\n",
+       "      <td>1.479013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>opinion_h1n1_vacc_effective</td>\n",
+       "      <td>391</td>\n",
+       "      <td>1.464036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>opinion_h1n1_risk</td>\n",
+       "      <td>388</td>\n",
+       "      <td>1.452803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>household_children</td>\n",
+       "      <td>249</td>\n",
+       "      <td>0.932340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>household_adults</td>\n",
+       "      <td>249</td>\n",
+       "      <td>0.932340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>behavioral_avoidance</td>\n",
+       "      <td>208</td>\n",
+       "      <td>0.778822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>behavioral_touch_face</td>\n",
+       "      <td>128</td>\n",
+       "      <td>0.479275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>h1n1_knowledge</td>\n",
+       "      <td>116</td>\n",
+       "      <td>0.434343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>h1n1_concern</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0.344479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>behavioral_large_gatherings</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.325757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>behavioral_outside_home</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0.307036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>behavioral_antiviral_meds</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0.265848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>behavioral_wash_hands</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.157262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>behavioral_face_mask</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.071142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>hhs_geo_region</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>census_msa</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>employment_industry</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>respondent_id</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>race</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>age_group</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>health_insurance</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>employment_occupation</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "race              Black  Hispanic  Other or Multiple  White\n",
-       "health_insurance                                           \n",
-       "0.0                 202       314                134   1086\n",
-       "1.0                 956       590                734  10417\n",
-       "missing             960       851                744   9719"
+       "                    column_name n_nans  percentage_nans\n",
+       "26               income_poverty   4423        16.561201\n",
+       "10             doctor_recc_h1n1   2160         8.087767\n",
+       "11         doctor_recc_seasonal   2160         8.087767\n",
+       "28                  rent_or_own   2042         7.645936\n",
+       "29            employment_status   1463         5.477965\n",
+       "27               marital_status   1408         5.272026\n",
+       "23                    education   1407         5.268282\n",
+       "12        chronic_med_condition    971         3.635751\n",
+       "13         child_under_6_months    820         3.070356\n",
+       "14                health_worker    804         3.010447\n",
+       "21  opinion_seas_sick_from_vacc    537         2.010709\n",
+       "20            opinion_seas_risk    514         1.924589\n",
+       "19  opinion_seas_vacc_effective    462         1.729884\n",
+       "18  opinion_h1n1_sick_from_vacc    395         1.479013\n",
+       "16  opinion_h1n1_vacc_effective    391         1.464036\n",
+       "17            opinion_h1n1_risk    388         1.452803\n",
+       "33           household_children    249         0.932340\n",
+       "32             household_adults    249         0.932340\n",
+       "4          behavioral_avoidance    208         0.778822\n",
+       "9         behavioral_touch_face    128         0.479275\n",
+       "2                h1n1_knowledge    116         0.434343\n",
+       "1                  h1n1_concern     92         0.344479\n",
+       "7   behavioral_large_gatherings     87         0.325757\n",
+       "8       behavioral_outside_home     82         0.307036\n",
+       "3     behavioral_antiviral_meds     71         0.265848\n",
+       "6         behavioral_wash_hands     42         0.157262\n",
+       "5          behavioral_face_mask     19         0.071142\n",
+       "30               hhs_geo_region      0         0.000000\n",
+       "31                   census_msa      0         0.000000\n",
+       "34          employment_industry      0         0.000000\n",
+       "0                 respondent_id      0         0.000000\n",
+       "25                          sex      0         0.000000\n",
+       "24                         race      0         0.000000\n",
+       "22                    age_group      0         0.000000\n",
+       "15             health_insurance      0         0.000000\n",
+       "35        employment_occupation      0         0.000000"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.crosstab(Xtrain.health_insurance, Xtrain.race)"
+    "percent_nans(Xtrain)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
